syntax = "proto3";

option go_package = "pb";

option cc_generic_services = true;

package pb.gubernator;

service ConfigService {
    // TODO: Add a test for this method
    // Given a rate limit descriptor return a descriptor status
    rpc GetPeers (GetPeersRequest) returns (GetPeersResponse) {}

    // Maybe add methods to get and set rate limits configs
    // This would be useful for clients that do control the the rate
    // limit and can't define it in the request

    // This method is for benchmark testing only
    rpc NoOp (NoOpRequest) returns (NoOpResponse) {}
}

message GetPeersRequest {}

message GetPeersResponse {
    repeated string peers = 1;
}

message NoOpRequest {}
message NoOpResponse {}
